2000-04-12  Eli Zaretskii  <eliz@is.elta.co.il>

	* msdos.c (NUM_MOUSE_BUTTONS): Define.
	(IT_frame_up_to_date): Support the buffer local value of
	cursor-type, if defined.

2000-04-10  Dave Love  <fx@gnu.org>

	* editfns.c (preceding-char, following-char): Doc fix.

2000-04-10  Ken Raeburn  <raeburn@gnu.org>

	* Makefile.in (temacs): Revert 2000-03-12 change.

2000-04-10  Jason Rumney  <jasonr@gnu.org>

	* xfaces.c (realize_face): Change FRAME_X_P to FRAME_WINDOW_P.

2000-04-10  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (setup_echo_area_for_printing): Choose an echo
	area buffer, if it's not set up yet.

	* indent.c (compute_motion): Set immediate_quit.

2000-04-09  Gerd Moellmann  <gerd@gnu.org>

	* xfaces.c (tty_suppress_bold_inverse_default_colors_p): New
	variable.
	(realize_tty_face): Suppress boldness if colors are the inverse of
	the default colors, and tty_suppress_bold_inverse_default_colors_p
	is set.
	(Ftty_suppress_bold_inverse_default_colors): New function.
	(syms_of_xfaces): Defsubr it.

	* buffer.c (Frestore_buffer_modified_p): New function.
	(syms_of_buffer): Defsubr it.

2000-04-08  Ken Raeburn  <raeburn@gnu.org>

	* charset.c (Fmake_char_internal): CHAR_COMPONENTS_VALID_P takes a
	charset id (int) argument, not a charset (Lisp_Object).

	* coding.h (code_convert_string): Declare.
	* coding.c (code_convert_string_norecord): Pass an int, not a lisp
	object, as the fourth argument to code_convert_string.

	* fontset.c (make_fontset_for_ascii_face): Use XINT on return
	value.
	(Fset_fontset_font): Use EQ to compare lisp objects.

2000-04-05  Ken Raeburn  <raeburn@gnu.org>

	* intervals.h (SET_INTERVAL_PARENT): Use INT_LISPLIKE to test for
	a pointer that looks like a lisp object.
	(SET_INTERVAL_OBJECT): Don't explicitly compare the object with
	zero, instead see whether it's an integer object, since they can't
	have intervals.
	(GET_INTERVAL_OBJECT): Simply assign to the destination.

	* dispnew.c (allocate_matrices_for_frame_redisplay,