@@ -1,3 +1,8 @@
+2000-04-12  Dave Love  <fx@gnu.org>
+
+	* fns.c (mapcar1): Test for null vals to support mapc.
+	(Fmapc): New function.
+
 2000-04-12  Eli Zaretskii  <eliz@is.elta.co.il>
 
 	* msdos.c (NUM_MOUSE_BUTTONS): Define.
